# obsidian-cli-py

./: LICENSE  README.md  example.py  pyproject.toml  test_core.py
obsidian_cli/: __init__.py  client.py  exceptions.py
obsidian_cli_wrapper/: __init__.py  client.py
py_obsidian_cli/: __init__.py  client.py
tests/: test_client.py  test_live_commands.py
