[tool.poetry]
name = "py-obsidian-cli-wrapper"
version = "0.1.0"
description = "A Python wrapper for the Obsidian CLI"
authors = ["Author <author@example.com>"]
readme = "README.md"
packages = [{include = "py_obsidian_cli"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
