[tool.poetry]
name = "obsidian-cli-py"
version = "0.1.1"
description = "A Python wrapper for the Obsidian CLI"
authors = ["Author <author@example.com>"]
readme = "README.md"
packages = [{include = "obsidian_cli"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
