[tool.poetry]
name = "wrapper-for-obsidian-cli"
version = "0.1.0"
description = "An unofficial, easy-to-use python bridge/wrapper for the new Obsidian CLI."
authors = ["MadnessOverflow"]
readme = "README.md"
repository = "https://github.com/MadnessOverflow/py-wrapper-for-obsidian-cli"
keywords = ["obsidian", "cli", "wrapper", "notes"]
packages = [{include = "obsidian_cli_wrapper"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
